# mini-bmc

./: .gitignore  README.md
docs/: DEMO_GUIDE.md  LEARNING_GUIDE.md
firmware/: CMakeLists.txt
firmware/include/: bmc_state.h  event_log.h  ipmi.h  pid_control.h  secure_boot.h  sensor.h
firmware/src/: bmc_state.c  event_log.c  ipmi.c  main.c  pid_control.c  secure_boot.c  sensor.c
redfish-api/: requirements.txt  server.py
scripts/: demo.sh  setup.sh  start.sh  stop.sh
tests/: Makefile  test_pid.c  test_redfish.py
web-ui/: dashboard.html
